# HTTP-Server

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: data.txt
include/: jsonconverter.h  place.h  request.h  response.h
src/: jsonconverter.cpp  place.cpp  request.cpp  response.cpp
